--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "^14.2.6",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@kolkov/angular-editor": "^2.1.0",
-    "@microsoft/signalr": "^5.0.5",
+    "@microsoft/signalr": "^8.0.0",
     "@ngrx/data": "^14.3.2",
     "@ngrx/effects": "^14.3.2",
     "@ngrx/entity": "^14.3.2",
@@ -51,9 +51,10 @@
     "ngx-extended-pdf-viewer": "^15.0.5",
     "ngx-perfect-scrollbar": "^10.1.0",
     "ngx-toastr": "^14.3.0",
-    "npm": "^8.14.0",
+    "npm": "^10.8.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "sass": "^1.77.2",
     "subsink": "^1.0.1",
     "tslib": "^2.0.0",
     "xlsx": "^0.18.5",
@@ -65,7 +66,7 @@
     "@angular/compiler-cli": "^14.2.6",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.2",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~4.2.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
@@ -73,6 +74,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "sass-loader": "^14.2.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.7.3"
